Fixed bug: buttons not centered because of css in mediaquery

--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -121,61 +121,3 @@
         margin-left: 23%;
     }
 }
-
-
-/* Round buttons */
-
-@media (max-width:360px) {
-    .btnHide {
-        margin-left: 12%;
-        margin-top: -150px;
-    }
-}
-
-@media (min-width:361px) and (max-width:492px) {
-    .btnHide {
-        margin-left: 21%;
-        margin-top: -28%;
-    }
-}
-
-@media (min-width:497px) and (max-width:549px) {
-    .btnHide {
-        margin-left: 24%;
-        margin-top: -23%;
-    }
-}
-
-@media (min-width:551px) and (max-width:767px) {
-    .btnHide {
-        margin-left: 15%;
-        margin-top: -14%;
-    }
-}
-
-@media (min-width:774px) and (max-width:991px) {
-    .btnHide {
-        margin-left: -7%;
-        margin-top: 1%;
-    }
-}
-
-@media (min-width:1001px) and (max-width:1219px) {
-    .btnHide {
-        margin-left: 25%;
-        margin-top: 1%;
-    }
-}
-
-@media (width:768px) {
-    .btnHide {
-        margin-left: 11%;
-        display: block;
-    }
-}
-
-@media (widht:375px) {
-    .btnHide {
-        margin-top: -36%;
-    }
-}
